--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@netlify/plugin-nextjs": "^4.36.1"
   }
 }
