--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-scripts": "5.0.1",
+    "styled-jsx": "^5.1.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.36.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -34,7 +36,6 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5",
-    "@netlify/plugin-nextjs": "^4.36.1"
+    "typescript": "^5"
   }
 }
